# ChangeLog for app-sci/chipmunksystem
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-sci/chipmunksystem/Attic/ChangeLog,v 1.2 2004/05/19 06:37:49 phosphan Exp $

*chipmunksystem-20031105-r1 (19 May 2004)

  19 May 2004; Patrick Kursawe <phosphan@gentoo.org>
  chipmunksystem-20031105-r1.ebuild:
  Fixes bug #51329: chipmunksystem (analog/diglog) crashes on startup trying
  to get log.gate out of /usr/share/chipmunksystem-20031105/lib/. 
  Added virtual/x11 dependency.
  done by Olivier Fisette <olivier.fisette@sympatico.ca>

*chipmunksystem-20031105 (17 May 2004)

  17 May 2004; Patrick Kursawe <phosphan@gentoo.org>
  chipmunksystem-20031105.ebuild, metadata.xml:
  Initial ebuild by Herton R. Krzesinski <herton@brturbo.com> and
  olivier.fisette@sympatico.ca with little modifications by phosphan@gentoo.org.
  See bug #24509.
