@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-sci/pcb/Attic/pcb-20040215.ebuild,v 1.1 2004/05/20 12:31:34 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-sci/pcb/Attic/pcb-20040215.ebuild,v 1.2 2004/05/25 17:29:13 dholm Exp $
 
 DESCRIPTION="tool for the layout of printed circuit boards"
 HOMEPAGE="http://pcb.sourceforge.net/"
@@ -8,7 +8,7 @@ SRC_URI="mirror://sourceforge/pcb/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~x86"
+KEYWORDS="~x86 ~ppc"
 IUSE="Xaw3d"
 
 RDEPEND="virtual/x11"
