@@ -1,6 +1,9 @@
 # ChangeLog for app-sci/pcb
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-sci/pcb/Attic/ChangeLog,v 1.7 2004/05/20 12:31:34 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-sci/pcb/Attic/ChangeLog,v 1.8 2004/05/25 17:29:13 dholm Exp $
+
+  25 May 2004; David Holm <dholm@gentoo.org> pcb-20040215.ebuild:
+  Added to ~ppc.
 
 *pcb-20040215 (20 May 2004)
 
