@@ -1,6 +1,10 @@
 # ChangeLog for app-sci/chipmunksystem
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-sci/chipmunksystem/Attic/ChangeLog,v 1.2 2004/05/19 06:37:49 phosphan Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-sci/chipmunksystem/Attic/ChangeLog,v 1.3 2004/05/25 17:30:25 dholm Exp $
+
+  25 May 2004; David Holm <dholm@gentoo.org>
+  chipmunksystem-20031105-r1.ebuild:
+  Added to ~ppc.
 
 *chipmunksystem-20031105-r1 (19 May 2004)
 
